--- a/.github/update.yaml
+++ b/.github/update.yaml
@@ -4,8 +4,8 @@ on:
   push:
     branches:
       - main
-    schedule:
-      cron: '0 6 * * 1'
+  schedule:
+    - cron: '0 6 * * 1'
 
 jobs:
   build-and-deploy:
