--- a/.github/update.yaml
+++ b/.github/update.yaml
@@ -1,11 +1,11 @@
 name: update
 
 on:
+  schedule:
+    - cron: '*/5 * * * *'
   push:
     branches:
       - main
-    schedule:
-      - cron: '10,20 * * * *'
 
 jobs:
   build-and-deploy:
